--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -16,4 +16,28 @@
   <!-- Needed to route the audio to the bluetooth headset if available -->
   <uses-permission android:name="android.permission.BLUETOOTH"/>
   <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+
+  <application>
+    <activity
+        android:name=".OutgoingCallActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+    </activity>
+
+    <service android:name="org.linphone.core.tools.service.CoreService"
+        android:foregroundServiceType="phoneCall|camera|microphone"
+        android:stopWithTask="false" />
+
+    <service android:name="org.linphone.core.tools.firebase.FirebaseMessaging"
+        android:enabled="true"
+        android:exported="false">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+  </application>
 </manifest>
